--- a/src/components/InputField/inputfield.css
+++ b/src/components/InputField/inputfield.css
@@ -1,3 +1,10 @@
+.input-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .input-group {
-    /*display: inline-flex;*/
+    display: flex;
+    justify-items: center;
 }
