--- a/src/layouts/InputForm/inputform.css
+++ b/src/layouts/InputForm/inputform.css
@@ -1,3 +1,9 @@
+.form-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .calculate-fee-btn {
     margin-top: 5%;
 }
