--- a/src/components/FeeForm/feeform.css
+++ b/src/components/FeeForm/feeform.css
@@ -1,13 +1,14 @@
 .form-container {
-    border: 2px solid black;
+    border: 3px solid black;
+    border-radius: 1%;
     width: 50%;
     height: 50vh;
     margin-left: 25%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding-top: 3%;
-    padding-bottom: 2%;
+    padding-top: 4%;
+    padding-bottom: 3%;
 }
 
 .calculate-fee-btn {
